src/styles/Coltivazioni.module.scss
.wrap {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  h1 {
    text-align: center;
    width: 100%;
  }
}
.createNew {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.table {
  width: 70%;
  padding: 2rem;
}

